# NAVA-Ai-Studio

./: .env.example  .eslintrc.json  .gitignore  ADVANCED_FEATURES_IMPLEMENTED.md  ADVANCED_WORKSPACE_GUIDE.md  API_DOCUMENTATION.md  APPLICATION_ECOSYSTEM_COMPLETE.md  APP_RUNNING_BROWSER_COMPATIBLE.md  ARCHITECTURE.md  AUTHENTICATION_CHECKLIST.md  AUTHENTICATION_COMPLETE_GUIDE.md  AUTHENTICATION_COMPLETE_SUMMARY.md  AUTHENTICATION_EXAMPLE.tsx  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_README.md  AUTHENTICATION_SYSTEM.md  AUTHENTICATION_VISUAL_GUIDE.md  BRANDING_GUIDE.md  BRAND_IDENTITY_COMPLETE.md  BROWSER_COMPATIBILITY_COMPLETE.md  BUILD_INSTRUCTIONS.md  CHECK_NAVA_MODEL.md  CLEAR_CACHE_INSTRUCTIONS.md  CLICKABLE_LOGO_UPDATE.md  CLOUD_DEPLOYMENT_README.md  COLAB_SETUP.md  COLLAPSE_FIX_SUMMARY.md  COLLAPSIBLE_PANELS_GUIDE.md  COLLAPSIBLE_PANELS_VERIFICATION.md  COMPLETE_ANSWER.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_PACKAGE_SUMMARY.md  COMPLETE_PLATFORM_SUMMARY.md  COMPLETE_SETUP_CHECKLIST.md  COMPREHENSIVE_ENHANCEMENT_SUMMARY.md  COMPREHENSIVE_STATUS_REPORT.md  CONTRIBUTING.md  CURSOR_STYLE_DIVIDERS_FINAL.md  Cargo.toml  DATASET_INTEGRATION_SPEC.md  (+234 more)
.github/workflows/: ci-cd.yml  license-metrics.yml  performance-monitoring.yml  policy-pack.yml  release-management.yml  security-scanning.yml
assets/examples/: basic-navigation.vnc  consciousness-integration.vnc  energy-landscape.vnc  multi-goal-navigation.vnc  quantum-navigation.vnc  real-world-robotics.vnc
backend-univarm/rust/: Cargo.toml  Drive.proto  README.md
backend-univarm/rust/public/engine/: README.md
backend-univarm/rust/src/: main.rs  presets.json  solver.rs
config/: univarm.env.template
data/: nava_docs_index.json  nava_instruct_daat_pdl.jsonl  nava_instruct_eval.jsonl  nava_instruct_eval_enhanced.jsonl  nava_instruct_eval_generated.jsonl  nava_instruct_train.jsonl  nava_instruct_train_enhanced.jsonl  nava_instruct_train_generated.jsonl
docs/: AI_PANEL_CAPABILITIES.md  AI_PANEL_COMPLETE_ARCHITECTURE.md  COPILOT_IMPLEMENTATION_STATUS.md  FINE_TUNING_GUIDE.md  NAVA_INSTRUCT_INTEGRATION.md  architecture.md  compilation-targets.md  deployment-guide.md  desktop-sdk.md  docusaurus.config.js  notebook-mode-spec.md  plugin-development.md  sidebars.js  vnc-language-reference.md
docs-mkdocs/: mkdocs.yml
docs-site/: README.md  docusaurus.config.js  package.json  sidebars.js
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  kafka-deployment.yaml  namespace.yaml  pvc.yaml  secrets.yaml
plugins/: README.md
public/: INSTALL_INSTRUCTIONS.txt  _redirects  create-complete-installer.sh  localization-demo.html  localization-widgets.html  localization.css  localization.js  manifest.json  service-worker.js  sw.js  unregister-sw.js  workspace-widgets.css  workspace-widgets.html  workspace-widgets.js
ros2_ws/src/univarm_drive_bridge_py/: package.xml  setup.cfg  setup.py
ros2_ws/src/univarm_drive_bridge_py/univarm_drive_bridge_py/: drive_bridge.py
ros2_ws/src/univarm_kobuki_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/univarm_kobuki_bringup/config/: controllers.yaml
ros2_ws/src/univarm_kobuki_bringup/launch/: bringup.launch.py
ros2_ws/src/univarm_kobuki_bringup/src/: path_follower.cpp
ros2_ws/src/univarm_kobuki_bringup/urdf/: kobuki.urdf.xacro
ros2_ws/src/univarm_path_emitter_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/univarm_path_emitter_cpp/src/: path_emitter.cpp
scripts/: README.md  README_FINETUNING.md  README_NAVA_MODEL.md  build.sh  build_nava_instruct_dataset.py  create-sdk-package.sh  create-standalone-app.sh  daat_pdl_data_generator.py  deploy.sh  ensure-installer.sh  finetune_nava_instruct.py  generate-pwa-icons.sh  generate_nava_dataset.js  install-sdk.ps1  install-sdk.sh  load_nava_model.py  nava_checker.py  nava_data_generator.py  nava_docs_indexer.py  nava_eval_harness.py  nava_explanation_generator.py  package.sh  serve_nava_model.py  setup-dev-environment.sh  start_nava_model.sh  test.sh  test_nava_fluency.py
sdk/: CONTRIBUTING.md  INSTALLER_BUILD.md  README.md  SDK_COMPLETE.md
sdk/native/: Cargo.toml
sdk/native/sdk/scripts/: build-all.sh
sdk/native/src/: constraints.rs  lib.rs  manifold.rs  navigation.rs  path.rs
simulation-platform/: Cargo.toml  README.md  config.json  dataset_server.py  nif_bridge.py  requirements-dataset.txt
simulation-platform/examples/: README.md  obstacle_course.json  outdoor_world.json  warehouse_world.json
simulation-platform/src/: main.rs
simulation-platform/src/api/: mod.rs
simulation-platform/src/core/: mod.rs  nif_integration.rs
simulation-platform/src/physics/: mod.rs
simulation-platform/src/rendering/: mod.rs
simulation-platform/src/robotics/: mod.rs
simulation-platform/src/ros2/: mod.rs
src/: App.css  App.tsx  main.rs  main.tsx  nif.rs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ai/: mod.rs  vla_models.rs
src-tauri/src/cloud/: deployment.rs
src-tauri/src/compiler/: cloud.rs  cpp.rs  glsl.rs  mod.rs  multi_target.rs  python.rs  wasm.rs
src-tauri/src/data/: dataset_integration.rs  kafka_pipeline.rs  mod.rs  spark_processing.rs
src-tauri/src/debugger/: breakpoint_manager.rs  mod.rs  navigation_tracer.rs  profiler.rs
src-tauri/src/hardware/: mod.rs
src-tauri/src/lsp/: completion.rs  mod.rs  parser.rs  semantic.rs  server.rs
src-tauri/src/middleware/: mod.rs  ros_middleware.rs
src-tauri/src/nif/: acceptance_gates.rs  architecture.rs  cna.rs  factor_graph.rs  integrity_monitoring.rs  mod.rs  securevla.rs  sensor_fusion.rs
src-tauri/src/plugins/: api.rs  manager.rs  mod.rs  registry.rs
src-tauri/src/preview/: hot_reload.rs  mod.rs  visualization.rs  wasm_runner.rs
src-tauri/src/simulation/: mod.rs  simulation_engine.rs
src-tauri/src/system/: mod.rs
src-tauri/src/ui/: web_interface.rs
tests/: README.md  setup.ts
wasm-preview/: Cargo.toml
wasm-preview/src/: lib.rs  navigation_runtime.rs  preview_engine.rs  wasm_bindings.rs
(+418 files in other folders)
