[workspace]
members = ["src-tauri", "wasm-preview", "simulation-platform"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Frank Van Laarhoven <frank@navlambda.studio>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://navlambda.studio"
repository = "https://github.com/frankvanlaarhoven/navlambda-studio"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Language Server Protocol
tower-lsp = "0.20"
lsp-types = "0.95"

# Parsing and AST
nom = "7.1"
tree-sitter = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Performance
rayon = "1.10"
parking_lot = "0.12"

# Tauri
tauri = { version = "1.6", features = ["api-all"] }
tauri-build = { version = "1.5" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

