[package]
name = "navlambda-simulation-platform"
version = "0.1.0"
edition = "2021"
authors = ["Frank Van Laarhoven <frank@navlambda.studio>"]
license = "MIT OR Apache-2.0"
description = "Rust-based simulation platform for Van Laarhoven Navigation Calculus"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Math and linear algebra
nalgebra = "0.32"
nalgebra-glm = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallel processing
rayon = "1.7"
crossbeam = "0.8"

# ROS2 integration (optional feature)
r2r = { version = "0.8", optional = true }

# Physics engine
rapier3d = "0.17"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# File system operations
tokio-util = { version = "0.7", features = ["io"] }

# Web API
warp = "0.3"
tokio-stream = "0.1"

[features]
default = []
ros2 = ["r2r"]

[dev-dependencies]
tokio-test = "0.4"