[package]
name = "navlambda-studio"
version = "1.0.0"
authors = ["Frank Van Laarhoven <frank@navlambda.studio>"]
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://navlambda.studio"
repository = "https://github.com/frankvanlaarhoven/navlambda-studio"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower-lsp = "0.20"
lsp-types = "0.94"
nom = "7.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
rapier3d = "0.18"
nalgebra = "0.32"
prost = "0.12"
tokio-stream = "0.1"
futures-channel = "0.3"
rdkafka = "0.36"

[dependencies.pyo3]
version = "0.20"
features = ["auto-initialize"]

[dependencies.tch]
version = "0.13"
features = ["download-libtorch"]
custom-protocol = ["tauri/custom-protocol"]
