[package]
name = "navlambda-wasm-preview"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
serde_json.workspace = true

# For console logging
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

