[package]
name = "univarm_backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["solver-wasm"]
solver-wasm = ["wasmtime"]
solver-grpc = ["tonic", "prost", "tokio/macros"]
# enable both via: --features "solver-wasm solver-grpc"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-files = "0.6"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
once_cell = "1"
parking_lot = "0.12"
rand = "0.8"

# optional solvers
wasmtime = { version = "23", optional = true }
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
