<?xml version="1.0"?>
<package format="3">
  <name>univarm_drive_bridge_py</name>
  <version>0.1.0</version>
  <description>Bridge between Univarm backend and ROS2 topics</description>
  <maintainer email="ops@univarm.local">Univarm</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
