<?xml version="1.0"?>
<package format="3">
  <name>univarm_kobuki_bringup</name>
  <version>0.1.0</version>
  <description>Univarm univarm_kobuki_bringup package</description>
  <maintainer email="ops@univarm.local">Univarm</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
