<?xml version="1.0"?>
<package format="3">
  <name>univarm_path_emitter_cpp</name>
  <version>0.1.0</version>
  <description>C++ nav_msgs/Path emitter wired to gRPC Drive.SolvePath</description>
  <maintainer email="ops@univarm.local">Univarm</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>univarm_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>univarm_msgs</exec_depend>
</package>
